--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>moduliths-test</module>
 		<module>moduliths-sample</module>
 		<module>moduliths-integration-test</module>
+		<module>moduliths-docs</module>
 	</modules>
 
 	<properties>
